--- a/regex/Makefile.am
+++ b/regex/Makefile.am
@@ -1,9 +1,11 @@
+include_HEADERS = Regex.h
+
 lib_LTLIBRARIES = libregex.la
 libregex_la_SOURCES = Regex.cpp
 	
-#libregex_la_LDFLAGS = -version-info 1:0:2
+libregex_la_LDFLAGS = -version-info 1:0:0
 
-bin_PROGRAMS = test
+check_PROGRAMS = test
 test_SOURCES = regexTest.cpp
-test_LDADD = libregex.la -lutils -L/usr/local/boost/lib -lboost_regex
-INCLUDES=-I../../utils/src
+test_LDADD = libregex.la ../utils/libutils.la -L${with_boost}/lib -lboost_regex
+INCLUDES=-I../utils -I${with_boost}/include
