--- a/fuzzy/Makefile.am
+++ b/fuzzy/Makefile.am
@@ -14,5 +14,5 @@ libfuzzy_la_LDFLAGS = -version-info 1:0:0
 
 check_PROGRAMS = test
 test_SOURCES = FuzzyTextSearch.cpp
-test_LDADD = libfuzzy.la ../utils/libutils.la ../regex/libregex.la -L${with_boost}/lib -lboost_regex
-INCLUDES=-I../utils -I../regex -I${with_boost}/include
+test_LDADD = libfuzzy.la ../utils/libutils.la ../regex/libregex.la ${BOOST_LIB}
+INCLUDES=-I../utils -I../regex ${BOOST_INCLUDE}
