--- a/regex/Makefile.am
+++ b/regex/Makefile.am
@@ -7,5 +7,5 @@ libregex_la_LDFLAGS = -version-info 1:0:0
 
 check_PROGRAMS = test
 test_SOURCES = regexTest.cpp
-test_LDADD = libregex.la ../utils/libutils.la -L${with_boost}/lib -lboost_regex
-INCLUDES=-I../utils -I${with_boost}/include
+test_LDADD = libregex.la ../utils/libutils.la ${BOOST_LIB}
+INCLUDES=-I../utils ${BOOST_INCLUDE}
