--- a/fuzzy/Makefile.am
+++ b/fuzzy/Makefile.am
@@ -1,4 +1,4 @@
-include_HEADERS = MatchFunction.h Soundex.h Ranking.h NGram.h
+include_HEADERS = MatchFunction.h Soundex.h Ranking.h NGram.h fuzzydlldef.h
 
 lib_LTLIBRARIES = libfuzzy.la
 libfuzzy_la_SOURCES = \
@@ -16,3 +16,5 @@ check_PROGRAMS = test
 test_SOURCES = FuzzyTextSearch.cpp
 test_LDADD = libfuzzy.la ../utils/libutils.la ../regex/libregex.la ${BOOST_LIB}
 INCLUDES=-I../utils -I../regex ${BOOST_INCLUDE}
+
+TESTS=testsearch.sh
