--- a/regex/Makefile.am
+++ b/regex/Makefile.am
@@ -1,4 +1,4 @@
-include_HEADERS = Regex.h
+include_HEADERS = Regex.h regexdlldef.h
 
 lib_LTLIBRARIES = libregex.la
 libregex_la_SOURCES = Regex.cpp
@@ -9,3 +9,5 @@ check_PROGRAMS = test
 test_SOURCES = regexTest.cpp
 test_LDADD = libregex.la ../utils/libutils.la ${BOOST_LIB}
 INCLUDES=-I../utils ${BOOST_INCLUDE}
+
+TESTS=test
