use the ${VERSION} macro in the sub-makefiles
git-svn-id: file:///srv/svnroot/semilib/trunk@1830 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/fuzzy/Makefile.am
+++ b/fuzzy/Makefile.am
@@ -13,7 +13,7 @@ libfuzzy_la_SOURCES = \
 	Soundex.cpp \
 	matchfunctions.cpp
 	
-libfuzzy_la_LDFLAGS = -version-info 1:0:0
+libfuzzy_la_LDFLAGS = -release ${VERSION}
 
 check_PROGRAMS = test
 test_SOURCES = FuzzyTextSearch.cpp
