bvarious fixes committed before going away
git-svn-id: file:///srv/svnroot/semilib/trunk@1850 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,19 @@
 SUBDIRS = utils regex fuzzy
 INCLUDES = -I../utils -I../regex -I../fuzzy
+EXTRA_DIST = Doxyfile win32 doc/html
+
+dist-hook:
+	rm -rf `find $(distdir)/win32 -name CVS`
+
+install-data-local: doc
+	$(INSTALL_DATA) -d $(prefix)/doc/html
+	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
+
+uninstall-local:
+	rm -R $(prefix)/doc
+	
+clean-local:
+	rm -R $(srcdir)/doc
+
+doc:
+	doxygen
