--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -1,5 +1,4 @@
 include_HEADERS = \
-	AbstractRegex.h \
 	Change.h \
 	Cloneable.h \
 	FileUtils.h \
@@ -18,6 +17,9 @@ include_HEADERS = \
 	functions.h \
 	istring.h \
 	posException.h \
+	PredicateResult.h \
+	SingleResult.h \
+	MultiResult.h \
 	utilsdlldef.h
 
 lib_LTLIBRARIES = libutils.la
@@ -36,8 +38,21 @@ libutils_la_SOURCES = \
 
 libutils_la_LDFLAGS = -release ${VERSION}
 
-check_PROGRAMS = test
-test_SOURCES = test.cpp
-test_LDADD = libutils.la
+bin_PROGRAMS = testPredicateResult
+check_PROGRAMS = testTimer testPredicateResult
+
+#test_SOURCES = test.cpp
+#test_LDADD = libutils.la
+
+testPredicateResult_SOURCES = testPredicateResult.cpp
+testPredicateResult_LDADD = libutils.la
+
+
+testTimer_SOURCES = testTimer.cpp
+testTimer_LDADD = libutils.la
+
+#bin_PROGRAMS = testPredicateResult
+#testPredicateResult_SOURCES = testPredicateResult.cpp
+#testPredicateResult_LDADD = libutils.la
 
 TESTS=test
