put include files in the right places
git-svn-id: file:///srv/svnroot/semilib/trunk@1918 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/fuzzy/Makefile.am
+++ b/fuzzy/Makefile.am
@@ -1,4 +1,7 @@
-include_HEADERS = \
+AM_LDFLAGS = -release ${VERSION}
+INCLUDES=-I../utils -I../regex ${BOOST_INCLUDE}
+
+pkginclude_HEADERS = \
 	NGramFunctor.h \
 	SoundexFunctor.h \
 	Ranking.h \
@@ -13,12 +16,9 @@ libfuzzy_la_SOURCES = \
 	Ranking.cpp \
 	NGram.cpp \
 	matchfunctions.cpp
-	
-libfuzzy_la_LDFLAGS = -release ${VERSION}
 
 check_PROGRAMS = test
 test_SOURCES = FuzzyTextSearch.cpp
 test_LDADD = libfuzzy.la ../utils/libutils.la ../regex/libregex.la ${BOOST_LIB}
-INCLUDES=-I../utils -I../regex ${BOOST_INCLUDE}
 
 TESTS=testsearch.sh
