--- a/Makefile.am
+++ b/Makefile.am
@@ -5,15 +5,16 @@ EXTRA_DIST = Doxyfile win32 doc/html
 dist-hook:
 	rm -rf `find $(distdir)/win32 -name CVS`
 
-install-data-local: doc
-	$(INSTALL_DATA) -d $(prefix)/doc/html
-	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
-
 uninstall-local:
-	rm -R $(prefix)/doc
+	-rm -R $(prefix)/doc
 	
 clean-local:
 	rm -R $(srcdir)/doc
 
 doc:
 	doxygen
+
+install-data-local: doc
+	$(INSTALL_DATA) -d $(prefix)/doc/html
+	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
+
