--- a/configure.ac
+++ b/configure.ac
@@ -36,28 +36,26 @@ AC_DISABLE_STATIC
 
 # Checks for programs.
 AC_PROG_CXX
-AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AC_PROG_MAKE_SET
-AC_PROG_RANLIB
 
 # Checks for libraries.
 
 # Checks for header files.
-AC_HEADER_STDC
-AC_CHECK_HEADERS([errno.h fcntl.h stddef.h stdlib.h unistd.h])
+#AC_HEADER_STDC
+#AC_CHECK_HEADERS([errno.h fcntl.h stddef.h stdlib.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-AC_C_INLINE
-AC_TYPE_SIZE_T
-AC_STRUCT_TM
-AC_CHECK_TYPES([ptrdiff_t])
+#AC_C_CONST
+#AC_C_INLINE
+#AC_TYPE_SIZE_T
+#AC_STRUCT_TM
+#AC_CHECK_TYPES([ptrdiff_t])
 
 # Checks for library functions.
-AC_FUNC_MALLOC
-AC_CHECK_FUNCS([memset mkdir strncasecmp regcomp])
+#AC_FUNC_MALLOC
+#AC_CHECK_FUNCS([memset mkdir strncasecmp regcomp])
 
 AC_CONFIG_FILES([Makefile utils/Makefile fuzzy/Makefile regex/Makefile])
 AC_OUTPUT
