make sure _WIN32_WINNT gets saved
git-svn-id: file:///srv/svnroot/semilib/trunk@1926 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -23,7 +23,7 @@
 				InlineFunctionExpansion="2"
 				OptimizeForProcessor="1"
 				AdditionalIncludeDirectories="..\Regex\src"
-				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;UTILS_BUILD_DLL"
+				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;UTILS_BUILD_DLL,_WIN32_WINNT=0x0400"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
@@ -80,7 +80,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\Regex\src,..\sxl\include"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;UTILS_BUILD_DLL"
+				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;UTILS_BUILD_DLL,_WIN32_WINNT=0x0400"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\..\..\Debug\dllUtils/dllUtils.pch"
