various build fixes
git-svn-id: file:///srv/svnroot/semilib/trunk@1928 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS = utils regex fuzzy
+SUBDIRS = utils regex fuzzy win32
 INCLUDES = -I../utils -I../regex -I../fuzzy
-EXTRA_DIST = Doxyfile win32 doc/html
+EXTRA_DIST = Doxyfile
 
 dist-hook:
 	rm -rf `find $(distdir)/win32 -name CVS`
