fixes for Logger
git-svn-id: file:///srv/svnroot/semilib/trunk@1935 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,6 @@ doc:
 	doxygen
 
 install-data-local: doc
-	$(INSTALL_DATA) -d $(prefix)/doc/html
+	$(INSTALL_DATA) -d -m 0755 $(prefix)/doc/html
 	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
 
