make utils dll-exportable
git-svn-id: file:///srv/svnroot/semilib/trunk@1936 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -264,6 +264,9 @@
 			</FileConfiguration>
 		</File>
 		<File
+			RelativePath="..\utils\utils.cpp">
+		</File>
+		<File
 			RelativePath="..\utils\utilsdlldef.h">
 		</File>
 	</Files>
