--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -36,10 +36,7 @@
 				SuppressStartupBanner="TRUE"
 				CompileAs="0"/>
 			<Tool
-				Name="VCCustomBuildTool"
-				Description="Installing Headers"
-				CommandLine="install.cmd"
-				Outputs="install.log"/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
@@ -58,7 +55,9 @@
 				TargetEnvironment="1"
 				TypeLibraryName="..\..\bin/dllUtils.tlb"/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCPostBuildEventTool"
+				Description="Installing Headers"
+				CommandLine="install.cmd"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -95,10 +94,7 @@
 				DebugInformationFormat="4"
 				CompileAs="0"/>
 			<Tool
-				Name="VCCustomBuildTool"
-				Description="Installing Headers"
-				CommandLine="install.cmd"
-				Outputs="install.log"/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
@@ -118,7 +114,9 @@
 				TargetEnvironment="1"
 				TypeLibraryName="../../bin/dllUtils.tlb"/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCPostBuildEventTool"
+				Description="Installing Headers"
+				CommandLine="install.cmd"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
