--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -59,8 +59,11 @@ LDADD = libutils.la liblogger.la libcoutlogger.la -lpthread ${LIBADD}
 liblogger_la_SOURCES = Logger.cpp
 libcoutlogger_la_SOURCES = CoutLogger.cpp
 
-check_PROGRAMS = testPredicateResult testLogger
+check_PROGRAMS = testPredicateResult testLogger testJoin
+
 testPredicateResult_SOURCES = testPredicateResult.cpp
 testLogger_SOURCES = testlogger.cpp
+
+testJoin_SOURCES = testJoin.cpp
 
 #TESTS=test
