trying to fix logger
git-svn-id: file:///srv/svnroot/semilib/trunk@1959 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -154,8 +154,7 @@
 		<File
 			RelativePath="..\utils\Lock.cpp">
 			<FileConfiguration
-				Name="Debug|Win32"
-				ExcludedFromBuild="TRUE">
+				Name="Debug|Win32">
 				<Tool
 					Name="VCCLCompilerTool"/>
 			</FileConfiguration>
