fix minor logger issues
git-svn-id: file:///srv/svnroot/semilib/trunk@1961 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -39,6 +39,7 @@ lib_LTLIBRARIES = libutils.la liblogger.la libcoutlogger.la
 libutils_la_SOURCES = \
 	FileUtils.cpp \
 	FlagsMapper.cpp \
+	Lock.cpp \
 	Mutex.cpp \
 	Persistence.cpp \
 	PersistenceManager.cpp \
