change output dirs
git-svn-id: file:///srv/svnroot/semilib/trunk@1962 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -14,7 +14,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\..\bin"
-			IntermediateDirectory=".\../../Release/dllUtils"
+			IntermediateDirectory="../../Release/$(ProjectName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
@@ -153,11 +153,6 @@
 		</File>
 		<File
 			RelativePath="..\utils\Lock.cpp">
-			<FileConfiguration
-				Name="Debug|Win32">
-				<Tool
-					Name="VCCLCompilerTool"/>
-			</FileConfiguration>
 		</File>
 		<File
 			RelativePath="..\utils\Lock.h">
