--- a/win32/logger.vcproj
+++ b/win32/logger.vcproj
@@ -38,7 +38,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="../../Release/$(ProjectName).lib"/>
+				OutputFile="../../Release/$(ProjectName).lib"
+				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
@@ -79,7 +80,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="../../Release/$(ProjectName).lib"/>
+				OutputFile="../../Release/$(ProjectName).lib"
+				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
