fix cross platform timer resolution
git-svn-id: file:///srv/svnroot/semilib/trunk@1972 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -60,7 +60,7 @@ LDADD = libutils.la liblogger.la libcoutlogger.la -lpthread ${LIBADD}
 liblogger_la_SOURCES = Logger.cpp
 libcoutlogger_la_SOURCES = CoutLogger.cpp
 
-check_PROGRAMS = testPredicateResult testLogger testJoin testRefcount
+check_PROGRAMS = testPredicateResult testLogger testJoin testRefcount testTimer
 
 testPredicateResult_SOURCES = testPredicateResult.cpp
 testLogger_SOURCES = testlogger.cpp
@@ -69,3 +69,4 @@ testJoin_SOURCES = testJoin.cpp
 
 testRefcount_SOURCES = testRefcount.cpp
 
+testTimer_SOURCES = testTimer.cpp
