improve output locations
git-svn-id: file:///srv/svnroot/semilib/trunk@1984 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/dllUtils.vcproj
+++ b/win32/dllUtils.vcproj
@@ -29,8 +29,8 @@
 				EnableFunctionLevelLinking="TRUE"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\../../Release/dllUtils/dllUtils.pch"
-				AssemblerListingLocation=".\../../Release/dllUtils/"
-				ProgramDataBaseFileName=".\../../Release/dllUtils/"
+				AssemblerListingLocation="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				CompileAs="0"/>
@@ -85,8 +85,8 @@
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\..\..\Debug\dllUtils/dllUtils.pch"
-				AssemblerListingLocation=".\..\..\Debug\dllUtils/"
-				ProgramDataBaseFileName=".\..\..\Debug\dllUtils/"
+				AssemblerListingLocation="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				DebugInformationFormat="4"
