--- a/win32/logger.vcproj
+++ b/win32/logger.vcproj
@@ -29,8 +29,8 @@
 				EnableFunctionLevelLinking="TRUE"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=""
-				AssemblerListingLocation="$(Outdir)/"
-				ProgramDataBaseFileName="$(Outdir)/logger.pdb"
+				AssemblerListingLocation="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				CompileAs="0"/>
@@ -70,8 +70,8 @@
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=""
-				AssemblerListingLocation="$(Outdir)/"
-				ProgramDataBaseFileName="$(Outdir)/"
+				AssemblerListingLocation="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				DebugInformationFormat="4"
