--- a/win32/coutlogger.vcproj
+++ b/win32/coutlogger.vcproj
@@ -13,8 +13,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="../../Release/$(ProjectName)"
-			IntermediateDirectory="../../Release/$(ProjectName)"
+			OutputDirectory="../../$(ConfigurationName)"
+			IntermediateDirectory="../../$(ConfigurationName)/$(Projectname)"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
@@ -38,7 +38,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="../../Release/$(ProjectName).lib"
+				OutputFile="$(OutDir)/$(ProjectName).lib"
 				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -57,8 +57,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../../Debug/$(Projectname)"
-			IntermediateDirectory="../../Debug/$(Projectname)"
+			OutputDirectory="../../$(ConfigurationName)"
+			IntermediateDirectory="../../$(ConfigurationName)/$(Projectname)"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
@@ -80,7 +80,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="../../Release/$(ProjectName).lib"
+				OutputFile="$(OutDir)/$(ProjectName).lib"
 				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
 				Name="VCMIDLTool"/>
