--- a/win32/semilib-dll.vcproj
+++ b/win32/semilib-dll.vcproj
@@ -197,6 +197,9 @@
 			RelativePath="..\utils\Singleton.cpp">
 		</File>
 		<File
+			RelativePath="..\utils\Singleton.h">
+		</File>
+		<File
 			RelativePath="..\utils\SmartPointer.cpp">
 		</File>
 		<File
