various logger fixes to avoid dual-singleton under gcc
git-svn-id: file:///srv/svnroot/semilib/trunk@1993 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = utils regex fuzzy win32
 INCLUDES = -I../utils -I../regex -I../fuzzy
-EXTRA_DIST = Doxyfile
+EXTRA_DIST = Doxyfile semilib.pc
 
 dist-hook:
 	rm -rf `find $(distdir)/win32 -name CVS`
@@ -18,3 +18,5 @@ install-data-local: doc
 	$(INSTALL_DATA) -d -m 0755 $(prefix)/doc/html
 	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = semilib.pc
