--- a/regex/Makefile.am
+++ b/regex/Makefile.am
@@ -7,11 +7,11 @@ pkginclude_HEADERS = \
 lib_LTLIBRARIES = libregex.la
 libregex_la_SOURCES = Regex.cpp
 	
-libregex_la_LDFLAGS = -release ${VERSION}
+libregex_la_LDFLAGS = -release ${VERSION} ${BOOST_LIBS}
 
 check_PROGRAMS = test
 test_SOURCES = regexTest.cpp
-test_LDADD = libregex.la ../utils/libutils.la ${BOOST_LIB}
+test_LDADD = libregex.la ../utils/libutils.la ${BOOST_LIBS}
 INCLUDES=-I../utils ${BOOST_INCLUDE}
 
 TESTS=test
