bounce version number to 2.x.x, remove fuzzy libs to separate library
git-svn-id: file:///srv/svnroot/semilib/trunk@2010 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = utils regex fuzzy win32
+SUBDIRS = utils regex win32
 INCLUDES = -I../utils -I../regex -I../fuzzy
 EXTRA_DIST = Doxyfile semilib.pc
 
