--- a/semilib.pc.in
+++ b/semilib.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: semilib
 Description: Various useful things for stuff
 Version: @VERSION@
-Libs: -L${libdir} -lutils -lregex -lfuzzy -llogger
+Libs: -L${libdir} -lutils -lregex -llogger
 Cflags: -I${includedir} @BOOST_INCLUDE@
