Don't include logger in semilib
git-svn-id: file:///srv/svnroot/semilib/trunk@2011 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,4 +19,4 @@ install-data-local: doc
 	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = semilib.pc
+pkgconfig_DATA = semilib.pc semilogger.pc
